--- a/src/main/resources/templates/converter.html
+++ b/src/main/resources/templates/converter.html
@@ -11,19 +11,7 @@
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark modern-navbar">
-    <a class="navbar-brand" href="#">MathOperations</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-            <a class="nav-item nav-link modern-link" href="/home">Calc</a>
-            <a class="nav-item nav-link active modern-link" href="/home/converter">Converter</a>
-        </div>
-    </div>
-</nav>
+<div th:replace="fragments/navbar :: navbar"></div>
 
 <div class="container calculator-container">
     <h2 class="text-center mb-4">Конвертер валют</h2>
