--- a/src/main/resources/templates/teachers.html
+++ b/src/main/resources/templates/teachers.html
@@ -14,6 +14,7 @@
             text-align: center;
         }
 
+
     </style>
 </head>
 <body>
@@ -64,6 +65,25 @@
         </tr>
         </tbody>
     </table>
+
+    <nav aria-label="Page navigation">
+        <ul class="pagination">
+            <li class="page-item" th:classappend="${currentPage == 0} ? 'disabled'">
+                <a class="page-link" th:href="@{/home/teachers(page=${currentPage - 1})}" aria-label="Previous">
+                    <span aria-hidden="true">&laquo;</span>
+                </a>
+            </li>
+            <li class="page-item" th:each="i : ${#numbers.sequence(0, totalPages-1)}"
+                th:classappend="${i == currentPage} ? 'active' : ''">
+                <a class="page-link" th:href="@{/home/teachers(page=${i})}" th:text="${i + 1}"></a>
+            </li>
+            <li class="page-item" th:classappend="${currentPage + 1 >= totalPages} ? 'disabled'">
+                <a class="page-link" th:href="@{/home/teachers(page=${currentPage + 1})}" aria-label="Next">
+                    <span aria-hidden="true">&raquo;</span>
+                </a>
+            </li>
+        </ul>
+    </nav>
 </div>
 
 <!-- Модальное окно добавления учителя -->
@@ -112,7 +132,6 @@
 
 <!-- Модальные окна для редактирования и удаления учителей -->
 <tr th:each="teacher : ${teachers}">
-    <!-- Модальное окно изменения учителя -->
     <!-- Модальное окно изменения учителя -->
     <div class="modal fade" th:id="'editTeacherModal' + ${teacher.id}" tabindex="-1" role="dialog"
          aria-labelledby="editTeacherModalLabel" aria-hidden="true">
@@ -195,7 +214,11 @@
             </div>
         </div>
     </div>
+
+
 </tr>
+
+
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
